#199 - Save and load query results for saved queries
- return amount of free and used slots for saved queries
- fix wrong datatype for "deleted" flag in SavedQuery
- add variable for amount of saved queries per user
- add total number of patients to save query POST
- delete "deleted" flag from saved query
- delete saved query function
- add total result to query list response for by-user endpoint (only available for admin role)
- Update swagger doc
- Add tests for delete saved query
- Add readme entry for MAX_SAVED_QUERIES_PER_USER
- Add more tests for QueryHandlerService
