# src/main/java/de/numcodex/feasibility_gui_backend/query/api/status/SavedQuerySlots.java
@@ -1,0 +1,14 @@
+package de.numcodex.feasibility_gui_backend.query.api.status;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.Builder;
+
+@JsonInclude()
+@Builder
+public record SavedQuerySlots(
+        @JsonProperty("used") long used,
+        @JsonProperty("free") long free
+)
+{
+}
